# Siz-Mapeditor

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  Editor.sln  LICENSE  README.md  REDUX_DEVELOPMENT_PLAN.md  mapserver.cfg.example  vcpkg.json
agents/: Bloodhound.md  Cartographer.md  Cleaver.md  Finesse.md  Loom.md  Lorekeeper.md  Phosphor.md  Pulse.md  Quicksilver.md  Sigil.md  Vanguard.md  Wraith.md
brushes/icon/: editor_icon.xpm
data/: menubar.xml
docs/superpowers/specs/: 2026-06-24-dark-mode-design.md
source/: CMakeLists.txt  about_window.cpp  about_window.h  action.cpp  action.h  add_item_window.cpp  add_tileset_window.cpp  add_to_tileset_window.cpp  add_to_tileset_window.h  application.cpp  application.h  basemap.cpp  basemap.h  browse_tile_window.cpp  brush.cpp  brush.h  brush_edit.cpp  brush_edit.h  carpet_brush.cpp  carpet_brush.h  client_version.cpp  client_version.h  comments_window.cpp  comments_window.h  common.cpp  common.h  common_windows.cpp  common_windows.h  complexitem.cpp  complexitem.h  container_properties_window.cpp  container_properties_window.h  creature.cpp  creature.h  creatures.cpp  creatures.h  dat_debug_view.cpp  dcbutton.cpp  dcbutton.h  definitions.h  (+146 more)
source/json/: json_spirit_reader_template.h
tests/: theme_tests.cpp
vcproj/: Editor.sln  ThemeTests.vcxproj
vcproj/Project/: Editor.vcxproj  Editor.vcxproj.filters  MapServer.vcxproj  MapServer.vcxproj.filters
